tests/golden/type_errors/generic_method_argument_mismatch.cd
struct Box { value: number }
impl Box {
  fun echo<T>(value: T): T { return value; }
}
let box: Box = Box { value: 0 };
box.echo<number>("bad");
