tests/golden/type_errors/generic_method_argument_mismatch.err
Type error at 6:23: argument 1 expects number, got string
  box.echo<number>("bad");
                        ^
